Add pending payments to consultations

--- a/app/views/admin/charges/_modal_charges.haml
+++ b/app/views/admin/charges/_modal_charges.haml
@@ -7,7 +7,8 @@
                        "aria-label": "Close" }
           %span{ "aria-hidden": "true" } &times;
         %h4.modal-title
-          Valores de Consulta
+          %span#payment-changes-title
+            Valores Pagados
           %small
             Historial de Cambios
       .modal-body
