--- a/app/views/admin/branch_offices/_form.haml
+++ b/app/views/admin/branch_offices/_form.haml
@@ -5,6 +5,10 @@
     .col-md-10
       = f.text_field :name, class: "form-control input-sm"
   .form-group
+    = f.label :city, t('branch_offices.fields.city'), class: "col-md-2 control-label"
+    .col-md-10
+      = f.text_field :city, class: "form-control input-sm user-input"
+  .form-group
     = f.label :address, t('branch_offices.fields.address'), class: "col-md-2 control-label"
     .col-md-10
       = f.text_field :address, class: "form-control input-sm user-input"
