Rename history to clinical history

--- a/app/views/consultations/_hint.haml
+++ b/app/views/consultations/_hint.haml
@@ -30,7 +30,7 @@
               %i.fa.fa-clone
           .col-xs-10
             %span
-              %a.hint-link#show(href="") Historia
+              %a.hint-link#show(href="") Historia clínica
 
         .row
           .col-xs-1
