--- a/app/views/consultations/edit.haml
+++ b/app/views/consultations/edit.haml
@@ -2,3 +2,5 @@
   = active_nav_to('Consulta', edit_patient_consultation_path(@patient, @consultation))
 
 = render 'form'
+= render 'diseases/suggestion'
+= render 'medicines/suggestion'
