--- a/app/views/settings/index.haml
+++ b/app/views/settings/index.haml
@@ -1,3 +1,6 @@
+= content_for :nav_option do
+  = active_nav_to('Preferencias', settings_path)
+
 .row
   .col-md-12
     %table.table.table-striped
