Add configurable website

--- a/app/assets/stylesheets/hippocrates.css
+++ b/app/assets/stylesheets/hippocrates.css
@@ -241,7 +241,11 @@ input[type="email"] {
 }
 
 .editableform .form-control {
-  width: 110px;
+  width: 75px;
+}
+
+.editableform .user-input {
+  width: 200px;
 }
 
 #printable-prescription {
