--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -45,6 +45,7 @@
                     = nav_to 'Preferencias', admin_settings_path
                     = nav_to 'Sucrusales', admin_branch_offices_path
                     = nav_to 'Usuarios', admin_users_path
+                    = nav_to 'Productividad', admin_charts_path
               = yield :nav_option
 
           %ul.nav.navbar-nav.navbar-right
