--- a/app/views/consultations/index.haml
+++ b/app/views/consultations/index.haml
@@ -88,14 +88,13 @@
                   .col-md-10.col-md-offset-2
                     %strong
                       %big= consultation.long_date
-                = render partial: "details", locals: { label: t("consultations.doctor"),
-                                                       content: consultation.doctor.pretty_name }
-                = render partial: "details", locals: { label: t("consultations.branch_office"),
-                                                       content: consultation.branch_office&.name }
-                = render partial: "details", locals: { label: t("consultations.ongoing_issue"),
-                                                       content: consultation.ongoing_issue }
-                = render partial: "details", locals: { label: t("consultations.miscellaneous"),
-                                                       content: consultation.miscellaneous }
+                = render partial: "details", locals: { label: t("consultations.doctor"), content: consultation.doctor.pretty_name }
+                = render partial: "details", locals: { label: t("consultations.branch_office"), content: consultation.branch_office&.name }
+                = render partial: "details", locals: { label: t("consultations.ongoing_issue"), content: consultation.ongoing_issue }
+                = render partial: "details", locals: { label: t("consultations.miscellaneous"), content: consultation.miscellaneous }
+                = render partial: "details", locals: { label: t("consultations.pending_payment"), content: nil,
+                                                       has_pending_payment: consultation.pending_payment?,
+                                                       payment: consultation.pretty_pending_payment }
                 - if consultation.next_appointment?
                   .row
                     .col-md-2.text-right.hidden-xs
@@ -106,7 +105,7 @@
                         = t("consultations.next_appointment")
                     .col-md-10
                       %span.semi-strong
-                      = consultation.next_appointment_long_date
+                        = consultation.next_appointment_long_date
                 = render partial: "details", locals: { label: t("consultations.diagnosis"),
                                                        content: consultation.diagnostic_plan }
                 = render partial: "documents", locals: { patient: @patient, consultation: consultation, documents: consultation.documents }
