--- a/app/views/consultations/_details.haml
+++ b/app/views/consultations/_details.haml
@@ -1,4 +1,5 @@
 - has_pending_payment ||= false
+- copy_enabled ||= false
 
 - if content.present? || has_pending_payment
   .row
@@ -8,11 +9,15 @@
     .col-md-2.visible-xs
       %span.semi-strong.text-muted
         = label
-    .col-md-10
+    .col-md-9
       - if has_pending_payment
         %span.semi-strong.text-danger
           = "$ #{payment}"
           %i.fa-solid.fa-sack-dollar
       - else
-        %span
+        %span.content
           = content
+    - if copy_enabled
+      .col-md-1.text-right
+        %span.btn.btn-copy{ "data-copy-on-click": content }
+          %i.fa-regular.fa-copy
