--- a/app/views/consultations/index.haml
+++ b/app/views/consultations/index.haml
@@ -90,8 +90,8 @@
                       %big= consultation.long_date
                 = render partial: "details", locals: { label: t("consultations.doctor"), content: consultation.doctor.pretty_name }
                 = render partial: "details", locals: { label: t("consultations.branch_office"), content: consultation.branch_office&.name }
-                = render partial: "details", locals: { label: t("consultations.ongoing_issue"), content: consultation.ongoing_issue }
-                = render partial: "details", locals: { label: t("consultations.miscellaneous"), content: consultation.miscellaneous }
+                = render partial: "details", locals: { label: t("consultations.ongoing_issue"), content: consultation.ongoing_issue, copy_enabled: true }
+                = render partial: "details", locals: { label: t("consultations.miscellaneous"), content: consultation.miscellaneous, copy_enabled: true }
                 = render partial: "details", locals: { label: t("consultations.pending_payment"), content: nil,
                                                        has_pending_payment: consultation.pending_payment?,
                                                        payment: consultation.pretty_pending_payment }
@@ -106,8 +106,7 @@
                     .col-md-10
                       %span.semi-strong
                         = consultation.next_appointment_long_date
-                = render partial: "details", locals: { label: t("consultations.diagnosis"),
-                                                       content: consultation.diagnostic_plan }
+                = render partial: "details", locals: { label: t("consultations.diagnosis"), content: consultation.diagnostic_plan, copy_enabled: true }
                 = render partial: "documents", locals: { patient: @patient, consultation: consultation, documents: consultation.documents }
               %td.text-right
                 .btn-group
