Update consents list

--- a/app/views/consultations/_modal_consents.haml
+++ b/app/views/consultations/_modal_consents.haml
@@ -48,7 +48,7 @@
                 %option{ value: "ranula",                           "data-tokens": "ranula"                           } RÁNULA
                 %option{ value: "reduction",                        "data-tokens": "reduction"                        } REDUCCION DE FRACTURA NASAL
                 %option{ value: "nose_touch_up",                    "data-tokens": "nose_touch_up"                    } RETOQUE NASAL
-                %option{ value: "functional_rhinoplasty",           "data-tokens": "functional_rhinoplasty"           } RINO MÁS MENTÓN
+                %option{ value: "functional_rhinoplasty",           "data-tokens": "functional_rhinoplasty"           } SEPTORRINOPLASTIA FUNCIONAL
                 %option{ value: "secondary_rhinoplasty",            "data-tokens": "secondary_rhinoplasty"            } RINOPLASTIA SECUNDARIA CON COSTILLA
                 %option{ value: "septoplasty",                      "data-tokens": "septoplasty"                      } SEPTOPLASTIA
                 %option{ value: "sinusitis_treatment",              "data-tokens": "sinusitis_treatment"              } TRATAMIENTO DE SINUSITIS
